Add build (and store) of testfiles/