@@ -123,6 +123,34 @@ task apidocs(type: JavaExec) {
     ignoreExitValue true
 }
 
+task testJavaDoc(type: JavaExec) {
+    dependsOn jar
+
+    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
+    classpath sourceSets.main.compileClasspath
+    classpath files(tasks.jar)
+
+    main = 'jdk.javadoc.internal.tool.Main'
+    args = ['-doctitle', 'test',
+        '-use',
+        '-linksource',
+        '-link', 'https://docs.oracle.com/en/java/javase/17/docs/api/',
+        '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '-tagletpath', files(tasks.jar).asType(List).join(pathSeparator),
+        '-taglet', 'org.jdrupes.taglets.plantUml.PlantUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.StartUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.EndUml',
+        '-d', 'build/test-javadocs',
+        '-sourcepath', 'testfiles/',
+        '-subpackages', 'test:testMore',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED'
+        ]
+
+    ignoreExitValue true
+}
+
 task docs (type: Copy) {
     from apidocs.destinationDir
     into '../../jdrupes-taglets.gh-pages/plantuml-taglet/javadoc/'
